src/antlr/ACLParser.ts
// Generated from ./src/antlr/ACL.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { ACLListener } from "./ACLListener.js";
import { ACLVisitor } from "./ACLVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class ACLParser extends antlr.Parser {
    public static readonly CLASS = 1;
    public static readonly COMPONENT = 2;
    public static readonly EXTENSION = 3;
    public static readonly CUTSCENE = 4;
    public static readonly FUNCTION = 5;
    public static readonly COROUTINE = 6;
    public static readonly WHILE = 7;
    public static readonly FOR = 8;
    public static readonly IN = 9;
    public static readonly IF = 10;
    public static readonly ELIF = 11;
    public static readonly ELSE = 12;
    public static readonly WAIT = 13;
    public static readonly RETURN = 14;
    public static readonly BREAK = 15;
    public static readonly CONTINUE = 16;
    public static readonly ID = 17;
    public static readonly PRIVATE = 18;
    public static readonly SELF = 19;
    public static readonly DOT = 20;
    public static readonly ASSIGN = 21;
    public static readonly SEMI = 22;
    public static readonly COMMA = 23;
    public static readonly MAIN = 24;
    public static readonly NUMBER = 25;
    public static readonly FLOAT = 26;
    public static readonly STRING = 27;
    public static readonly BOOL = 28;
    public static readonly NULL = 29;
    public static readonly PLUS = 30;
    public static readonly MINUS = 31;
    public static readonly MULTIPLY = 32;
    public static readonly DIVIDE = 33;
    public static readonly PLUS_ASSIGN = 34;
    public static readonly MINUS_ASSIGN = 35;
    public static readonly MULTIPLY_ASSIGN = 36;
    public static readonly DIVIDE_ASSIGN = 37;
    public static readonly EQUALS = 38;
    public static readonly NOT_EQUALS = 39;
    public static readonly LESS = 40;
    public static readonly LESS_EQUAL = 41;
    public static readonly GREATER = 42;
    public static readonly GREATER_EQUAL = 43;
    public static readonly AND = 44;
    public static readonly OR = 45;
    public static readonly NOT = 46;
    public static readonly LBRACE = 47;
    public static readonly RBRACE = 48;
    public static readonly LPAREN = 49;
    public static readonly RPAREN = 50;
    public static readonly WS = 51;
    public static readonly COMMENT = 52;
    public static readonly BLOCK_COMMENT = 53;
    public static readonly RULE_program = 0;
    public static readonly RULE_entryPointDecl = 1;
    public static readonly RULE_classDecl = 2;
    public static readonly RULE_classBody = 3;
    public static readonly RULE_variableDecl = 4;
    public static readonly RULE_methodDecl = 5;
    public static readonly RULE_paramList = 6;
    public static readonly RULE_block = 7;
    public static readonly RULE_statement = 8;
    public static readonly RULE_whileLoop = 9;
    public static readonly RULE_forLoop = 10;
    public static readonly RULE_ifStatement = 11;
    public static readonly RULE_elifBlock = 12;
    public static readonly RULE_elifStatement = 13;
    public static readonly RULE_elseStatement = 14;
    public static readonly RULE_returnStatement = 15;
    public static readonly RULE_waitStatement = 16;
    public static readonly RULE_expression = 17;
    public static readonly RULE_assignmentExpression = 18;
    public static readonly RULE_logicalOrExpression = 19;
    public static readonly RULE_logicalAndExpression = 20;
    public static readonly RULE_equalityExpression = 21;
    public static readonly RULE_relationalExpression = 22;
    public static readonly RULE_additiveExpression = 23;
    public static readonly RULE_multiplicativeExpression = 24;
    public static readonly RULE_unaryExpression = 25;
    public static readonly RULE_postfixExpression = 26;
    public static readonly RULE_postfixOperator = 27;
    public static readonly RULE_methodCall = 28;
    public static readonly RULE_fieldAccess = 29;
    public static readonly RULE_primaryExpression = 30;
    public static readonly RULE_literal = 31;
    public static readonly RULE_argumentList = 32;

    public static readonly literalNames = [
        null, "'class'", "'component'", "'extension'", "'cutscene'", "'function'", 
        "'coroutine'", "'while'", "'for'", "'in'", "'if'", "'elif'", "'else'", 
        "'wait'", "'return'", "'break'", "'continue'", null, "'_'", "'self'", 
        "'.'", "'='", "';'", "','", "'Main'", null, null, null, null, "'null'", 
        "'+'", "'-'", "'*'", "'/'", "'+='", "'-='", "'*='", "'/='", "'=='", 
        "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'{'", 
        "'}'", "'('", "')'"
    ];

    public static readonly symbolicNames = [
        null, "CLASS", "COMPONENT", "EXTENSION", "CUTSCENE", "FUNCTION", 
        "COROUTINE", "WHILE", "FOR", "IN", "IF", "ELIF", "ELSE", "WAIT", 
        "RETURN", "BREAK", "CONTINUE", "ID", "PRIVATE", "SELF", "DOT", "ASSIGN", 
        "SEMI", "COMMA", "MAIN", "NUMBER", "FLOAT", "STRING", "BOOL", "NULL", 
        "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "PLUS_ASSIGN", "MINUS_ASSIGN", 
        "MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", "EQUALS", "NOT_EQUALS", "LESS", 
        "LESS_EQUAL", "GREATER", "GREATER_EQUAL", "AND", "OR", "NOT", "LBRACE", 
        "RBRACE", "LPAREN", "RPAREN", "WS", "COMMENT", "BLOCK_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "entryPointDecl", "classDecl", "classBody", "variableDecl", 
        "methodDecl", "paramList", "block", "statement", "whileLoop", "forLoop", 
        "ifStatement", "elifBlock", "elifStatement", "elseStatement", "returnStatement", 
        "waitStatement", "expression", "assignmentExpression", "logicalOrExpression", 
        "logicalAndExpression", "equalityExpression", "relationalExpression", 
        "additiveExpression", "multiplicativeExpression", "unaryExpression", 
        "postfixExpression", "postfixOperator", "methodCall", "fieldAccess", 
        "primaryExpression", "literal", "argumentList",
    ];

    public get grammarFileName(): string { return "ACL.g4"; }
    public get literalNames(): (string | null)[] { return ACLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return ACLParser.symbolicNames; }
    public get ruleNames(): string[] { return ACLParser.ruleNames; }
    public get serializedATN(): number[] { return ACLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, ACLParser._ATN, ACLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, ACLParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 69;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 30) !== 0)) {
                {
                {
                this.state = 66;
                this.classDecl();
                }
                }
                this.state = 71;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public entryPointDecl(): EntryPointDeclContext {
        let localContext = new EntryPointDeclContext(this.context, this.state);
        this.enterRule(localContext, 2, ACLParser.RULE_entryPointDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 72;
            this.match(ACLParser.CLASS);
            this.state = 73;
            this.match(ACLParser.MAIN);
            this.state = 74;
            this.match(ACLParser.LBRACE);
            this.state = 75;
            this.classBody();
            this.state = 76;
            this.match(ACLParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public classDecl(): ClassDeclContext {
        let localContext = new ClassDeclContext(this.context, this.state);
        this.enterRule(localContext, 4, ACLParser.RULE_classDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 78;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 30) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 79;
            this.match(ACLParser.ID);
            this.state = 80;
            this.match(ACLParser.LBRACE);
            this.state = 81;
            this.classBody();
            this.state = 82;
            this.match(ACLParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public classBody(): ClassBodyContext {
        let localContext = new ClassBodyContext(this.context, this.state);
        this.enterRule(localContext, 6, ACLParser.RULE_classBody);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 393312) !== 0)) {
                {
                this.state = 86;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case ACLParser.ID:
                case ACLParser.PRIVATE:
                    {
                    this.state = 84;
                    this.variableDecl();
                    }
                    break;
                case ACLParser.FUNCTION:
                case ACLParser.COROUTINE:
                    {
                    this.state = 85;
                    this.methodDecl();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public variableDecl(): VariableDeclContext {
        let localContext = new VariableDeclContext(this.context, this.state);
        this.enterRule(localContext, 8, ACLParser.RULE_variableDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 92;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 18) {
                {
                this.state = 91;
                this.match(ACLParser.PRIVATE);
                }
            }

            this.state = 94;
            this.match(ACLParser.ID);
            this.state = 95;
            this.match(ACLParser.ASSIGN);
            this.state = 96;
            this.expression();
            }
            this.state = 98;
            this.match(ACLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public methodDecl(): MethodDeclContext {
        let localContext = new MethodDeclContext(this.context, this.state);
        this.enterRule(localContext, 10, ACLParser.RULE_methodDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 100;
            _la = this.tokenStream.LA(1);
            if(!(_la === 5 || _la === 6)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 101;
            this.match(ACLParser.ID);
            this.state = 102;
            this.match(ACLParser.LPAREN);
            this.state = 104;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 17) {
                {
                this.state = 103;
                this.paramList();
                }
            }

            this.state = 106;
            this.match(ACLParser.RPAREN);
            this.state = 107;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public paramList(): ParamListContext {
        let localContext = new ParamListContext(this.context, this.state);
        this.enterRule(localContext, 12, ACLParser.RULE_paramList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 109;
            this.match(ACLParser.ID);
            this.state = 114;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 23) {
                {
                {
                this.state = 110;
                this.match(ACLParser.COMMA);
                this.state = 111;
                this.match(ACLParser.ID);
                }
                }
                this.state = 116;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 14, ACLParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 117;
            this.match(ACLParser.LBRACE);
            this.state = 121;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3189761408) !== 0) || _la === 46 || _la === 47) {
                {
                {
                this.state = 118;
                this.statement();
                }
                }
                this.state = 123;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 124;
            this.match(ACLParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 16, ACLParser.RULE_statement);
        try {
            this.state = 140;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 126;
                this.variableDecl();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 127;
                this.expression();
                this.state = 128;
                this.match(ACLParser.SEMI);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 130;
                this.ifStatement();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 131;
                this.whileLoop();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 132;
                this.forLoop();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 133;
                this.waitStatement();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 134;
                this.block();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 135;
                this.returnStatement();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 136;
                this.match(ACLParser.BREAK);
                this.state = 137;
                this.match(ACLParser.SEMI);
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 138;
                this.match(ACLParser.CONTINUE);
                this.state = 139;
                this.match(ACLParser.SEMI);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whileLoop(): WhileLoopContext {
        let localContext = new WhileLoopContext(this.context, this.state);
        this.enterRule(localContext, 18, ACLParser.RULE_whileLoop);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 142;
            this.match(ACLParser.WHILE);
            this.state = 143;
            this.match(ACLParser.LPAREN);
            this.state = 144;
            this.expression();
            this.state = 145;
            this.match(ACLParser.RPAREN);
            this.state = 146;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public forLoop(): ForLoopContext {
        let localContext = new ForLoopContext(this.context, this.state);
        this.enterRule(localContext, 20, ACLParser.RULE_forLoop);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 148;
            this.match(ACLParser.FOR);
            this.state = 149;
            this.match(ACLParser.LPAREN);
            this.state = 150;
            this.match(ACLParser.ID);
            this.state = 151;
            this.match(ACLParser.IN);
            this.state = 152;
            this.expression();
            this.state = 153;
            this.match(ACLParser.RPAREN);
            this.state = 154;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifStatement(): IfStatementContext {
        let localContext = new IfStatementContext(this.context, this.state);
        this.enterRule(localContext, 22, ACLParser.RULE_ifStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 156;
            this.match(ACLParser.IF);
            this.state = 157;
            this.match(ACLParser.LPAREN);
            this.state = 158;
            this.expression();
            this.state = 159;
            this.match(ACLParser.RPAREN);
            this.state = 160;
            this.block();
            this.state = 164;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 11) {
                {
                {
                this.state = 161;
                this.elifStatement();
                }
                }
                this.state = 166;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 168;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 167;
                this.elseStatement();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elifBlock(): ElifBlockContext {
        let localContext = new ElifBlockContext(this.context, this.state);
        this.enterRule(localContext, 24, ACLParser.RULE_elifBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 173;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 11) {
                {
                {
                this.state = 170;
                this.elifStatement();
                }
                }
                this.state = 175;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 177;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 176;
                this.elseStatement();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elifStatement(): ElifStatementContext {
        let localContext = new ElifStatementContext(this.context, this.state);
        this.enterRule(localContext, 26, ACLParser.RULE_elifStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 179;
            this.match(ACLParser.ELIF);
            this.state = 180;
            this.match(ACLParser.LPAREN);
            this.state = 181;
            this.expression();
            this.state = 182;
            this.match(ACLParser.RPAREN);
            this.state = 183;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elseStatement(): ElseStatementContext {
        let localContext = new ElseStatementContext(this.context, this.state);
        this.enterRule(localContext, 28, ACLParser.RULE_elseStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 185;
            this.match(ACLParser.ELSE);
            this.state = 186;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnStatement(): ReturnStatementContext {
        let localContext = new ReturnStatementContext(this.context, this.state);
        this.enterRule(localContext, 30, ACLParser.RULE_returnStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.match(ACLParser.RETURN);
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 17)) & ~0x1F) === 0 && ((1 << (_la - 17)) & 536895245) !== 0)) {
                {
                this.state = 189;
                this.expression();
                }
            }

            this.state = 192;
            this.match(ACLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public waitStatement(): WaitStatementContext {
        let localContext = new WaitStatementContext(this.context, this.state);
        this.enterRule(localContext, 32, ACLParser.RULE_waitStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 194;
            this.match(ACLParser.WAIT);
            this.state = 195;
            this.expression();
            this.state = 196;
            this.match(ACLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 34, ACLParser.RULE_expression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 198;
            this.assignmentExpression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignmentExpression(): AssignmentExpressionContext {
        let localContext = new AssignmentExpressionContext(this.context, this.state);
        this.enterRule(localContext, 36, ACLParser.RULE_assignmentExpression);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 200;
            this.logicalOrExpression();
            this.state = 203;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 21)) & ~0x1F) === 0 && ((1 << (_la - 21)) & 122881) !== 0)) {
                {
                this.state = 201;
                _la = this.tokenStream.LA(1);
                if(!(((((_la - 21)) & ~0x1F) === 0 && ((1 << (_la - 21)) & 122881) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 202;
                this.assignmentExpression();
                }
            }
